--- a/emp_app/templates/index.html
+++ b/emp_app/templates/index.html
@@ -9,23 +9,23 @@
     <title>Employee Management System</title>
     <style>
         body {
-            background-color: #fffdd0;
+            background-color: #ADD8E6;
         }
 
         .container {
             text-align: center;
             padding: 20px;
-            margin-top: 50px; /* Adjust as needed */
+            margin-top: 50px;
         }
 
         h1 {
             text-shadow: 2px 2px 3px black;
-            margin-bottom: 20px; /* Adjust as needed */
+            margin-bottom: 20px;
         }
 
         .btn {
             margin: 10px;
-            display: block; /* Set the display property to block */
+            display: block;
         }
     </style>
 </head>
@@ -34,10 +34,14 @@
     <div class="container text-center">
         <h1>Employee Management System</h1>
         <hr>
-        <a style="  color: black; background-color: #FFD580" class="btn btn-primary" href="/viewall" role="button">View All Employees</a>
-        <a  style=" color: black; background-color:#FFD580" class="btn btn-primary" href="/add" role="button">Add An Employee</a>
-        <a  style=" color: black; background-color:#FFD580" class="btn btn-primary" href="/remove" role="button">Remove An Employee</a>
-        <a  style=" color: black; background-color:#FFD580" class="btn btn-primary" href="/filter_emp"  role="button">Filter</a>
+        <a style="  color: white; background-color: #0c0800" class="btn btn-primary" href="/viewall" role="button">View
+            All Employees</a>
+        <a style=" color: white; background-color:#0c0800" class="btn btn-primary" href="/add" role="button">Add An
+            Employee</a>
+        <a style=" color: white; background-color:#0c0800" class="btn btn-primary" href="/remove" role="button">Remove
+            An Employee</a>
+        <a style=" color: white; background-color:#0c0800" class="btn btn-primary" href="/filter_emp"
+            role="button">Filter</a>
         <hr>
     </div>
 </body>
