--- a/emp_app/templates/success.html
+++ b/emp_app/templates/success.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +9,18 @@
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f8f9fa; /* Use a light background color */
+            background-color: #ADD8E6;
             margin: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh; /* 100% viewport height */
+            height: 100vh;
         }
 
         .success-message {
-            background-color: #28a745; /* Green color for success message */
-            color: #fff; /* White text color */
+            background-color: black;
+            color: white;
             padding: 15px;
             border-radius: 5px;
             text-align: center;
@@ -33,21 +34,23 @@
             position: fixed;
             top: 20px;
             right: 20px;
-            background-color: #28a745; /* Green color for the button */
-            color: #fff; /* White text color */
+            background-color: #145DA0;
+            color: #fff;
             padding: 10px 20px;
-            border: none;
+            border: 4px 4px 4px black;
             border-radius: 5px;
             font-size: 1rem;
             cursor: pointer;
         }
     </style>
 </head>
-<body  style="background-color: #f39c12; ">
+
+<body>
     <div class="success-message">
         Entry deleted successfully!
     </div>
 
-    <a  style="text-decoration: none;" class="go-home-button" href="/">Go to Home</a>
+    <a style="text-decoration: none;" class="go-home-button" href="/">Go to Home</a>
 </body>
+
 </html>
