--- a/emp_app/templates/viewall.html
+++ b/emp_app/templates/viewall.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,15 @@
 
     <style>
         a:hover {
-            background-color: #FFD580;
+            background-color: #145DA0;
         }
 
         .go-home-button {
             position: fixed;
             top: 20px;
             left: 20px;
-            background-color: #28a745; /* Green color for the button */
-            color: #fff; /* White text color */
+            background-color: #B1D4E0;
+            color: black;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
@@ -25,28 +26,35 @@
         }
     </style>
 </head>
-<body style="background-color: #f39c12; ">
-    <div style="padding: 10px; background-color: #FFD580">
-        <h1 style="margin: 10px; text-align: center; color: black; font-weight: bold; font-size: xx-large; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">EMPLOYEE DETAILS</h1>
+
+<body style="background-color:  #ADD8E6 ">
+    <div style="padding: 10px; background-color: #2E8BC0">
+        <h1
+            style="margin: 10px; text-align: center; color: black; font-weight: bold; font-size: xx-large; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+            EMPLOYEE DETAILS</h1>
     </div>
 
     <a class="go-home-button" href="/">Go to Home</a>
 
-    <table style="width: 100%; font-size: large; color: black; font-weight: bold;" class="table" align="center" cellpadding="15px" cellspacing="8px" border="3px">
+    <table style="width: 100%; font-size: large; color: black; font-weight: bold;" class="table" align="center"
+        cellpadding="15px" cellspacing="8px" border="3px">
         <thead>
             <tr>
-                <th style="font-weight: bold; font-size: larger;" scope="col">Sr. No.</th>
+                <th style="font-weight: bold; font-size: larger;" scope="col">Emp. Id</th>
                 <th style="font-weight: bold; font-size: larger;" scope="col">Employee Name</th>
             </tr>
         </thead>
         <tbody>
             {% for i in x %}
             <tr>
-                <td style="text-align: center;"><a style="text-decoration: none; color: black;" href="viewone/{{ i.id }}">{{ i.id }}</a></td>
-                <td style="text-align: center;"><a style="text-decoration: none; color: black;" href="viewone/{{ i.id }}">{{ i.f_name }} {{ i.l_name }}</a></td>
+                <td style="text-align: center;"><a style=" text-decoration: none; color: black;"
+                        href="viewone/{{ i.id }}">{{ i.id }}</a></td>
+                <td style="text-align: center;"><a style="text-decoration: none; color: black;"
+                        href="viewone/{{ i.id }}">{{ i.f_name }} {{ i.l_name }}</a></td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </body>
+
 </html>
