new commit by samay

--- a/emp_app/templates/add.html
+++ b/emp_app/templates/add.html
@@ -76,7 +76,7 @@
     <a style="text-decoration: none;" class="go-home-button" href="/">Go to Home</a>
 
     <div class="content-below-navbar">
-
+<h1  style="text-align: center;">ADD EMPLOYEE DETAILS</h1>
         <form style="background-color:  #ADD8E6" method="post" action="{% url 'add' %}" enctype="multipart/form-data">
             {% csrf_token %}
 
