update option added

--- a/emp_app/templates/viewone.html
+++ b/emp_app/templates/viewone.html
@@ -120,6 +120,9 @@
         <a href="/viewall" style="text-decoration: none;">
             <button>Back</button>
         </a>
+        <a href="{% url 'update_employee' x.id %}" style="text-decoration: none;">
+            <button>Update</button>
+        </a>
     </div>
 </body>
 
